--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="./dict-key.js" charset="utf-8"></script>
     <script src="./search.js" charset="utf-8"></script>
     <script src="./index.js" charset="utf-8"></script>
+    <link rel="shortcut icon" type="image/png" href="favicon.png" >
 </head>
 
 <body>
