--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="./dict-key.js" charset="utf-8"></script>
     <script src="./search.js" charset="utf-8"></script>
     <script src="./index.js" charset="utf-8"></script>
+    <script src="./index-hooks.js" charset="utf-8"></script>
     <link rel="shortcut icon" type="image/png" href="favicon.png" >
 </head>
 
@@ -35,9 +36,9 @@
                 <form class="form d-flex justify-content-center md-form form-sm mt-0 form-inline">
                     <input class="form-control form-control-sm ml-3 w-75 pl-0 pr-0" type="text" placeholder="Search" id="search" style="width:80%;" autofocus/>
                     <select class="form-control w-25 pl-0 pr-0" id="search-direction" style="width:18%;">
-                        <option>English & CW</option>
-                        <option>CW</option>
-                        <option>English</option>
+                        <option value="0">English & CW</option>
+                        <option value="1">CW</option>
+                        <option value="2">English</option>
                     </select>
                 </form>
             </div>
@@ -55,9 +56,7 @@
                         <th>Source</th>
                     </tr>
                 </thead>
-                <tbody>
-                    
-                </tbody>
+                <tbody></tbody>
             </table>
         </div>
     </main>
