--- a/index.html
+++ b/index.html
@@ -43,8 +43,18 @@
                 </form>
             </div>
         </div>
+
+        <div class="loader" id="loader-6" style="opacity:0;">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+
         <div class="container ml-2 mr-2">
-            <h2 class="text-center">Search Results</h2>
+            <h2 class="text-center" style="margin-top:0px; padding-top:0px;">
+                Search Results
+            </h2>
             <table class="table table-striped" id="results">
                 <thead>
                     <tr>
