--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <title>Chinook Wawa Dictionary Search</title>
+    <title>Chinook Wawa Search</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
@@ -28,8 +28,16 @@
         </div>
         <div class="jumbotron text-center">
             <h1>Chinuk Wawa Search</h1>
-            <p>Enter <span id="guide-text">a Chinuk Wawa or English</span> term in the search box below.</p>
+            <p><span id="subheader" class="subheader">Enter <span id="guide-text">a Chinuk Wawa or English</span> term in the search box below.</span></p>
         </div>
+
+        <noscript>
+            <div class="container ml-2 mr-2">
+                <div class="alert alert-danger" role="alert">
+                    This search utility requires JavaScript to be enabled, as all logic is entirely client-side.
+                </div>
+            </div>
+        </noscript>
 
         <div class="container ml-2 mr-2">
             <div class="container" style="width:100%;">
