--- a/index.html
+++ b/index.html
@@ -2,7 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Chinook Wawa Search"/>
+    <meta property="og:image" content="https://chinookwawasearch.github.io/resources/favicon-full.png"/>
+    <meta property="og:url" content="https://chinookwawasearch.github.io"/>
+    <meta property="og:locale" content="en_CA"/>
+
     <title>Chinook Wawa Search</title>
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
