updated scrape process to use apikey

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             This dictionary search utility is part of a private beta test. Please do not circulate publicly!
         </div>
         <div class="jumbotron text-center">
-            <h1>Chinuk Wawa Search</h1>
-            <p><span id="subheader" class="subheader">Enter <span id="guide-text">a Chinuk Wawa or English</span> term in the search box below.</span></p>
+            <h1>Chinook Wawa Search</h1>
+            <p><span id="subheader" class="subheader">Enter <span id="guide-text">a Chinook Wawa or English</span> term in the search box below.</span></p>
         </div>
 
         <noscript>
