--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
     <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.3"></script>
+    <script src="./date.js" charset="utf-8"></script>
     <script src="./latinize.js" charset="utf-8"></script>
     <script src="./dict.js" charset="utf-8"></script>
     <script src="./dict-key.js" charset="utf-8"></script>
@@ -30,6 +31,17 @@
 
 <body>
     <main role="main">
+        <nav class="navbar navbar-inverse navbar-static-top">
+            <div class="container-fluid">
+              <div class="navbar-header">
+                <a class="navbar-brand" href="/">Chinook Wawa Search</a>
+              </div>
+              <ul class="nav navbar-nav navbar-right">
+                <p class="navbar-text" id="date-text"></p>
+              </ul> 
+            </div>
+        </nav>
+
         <div class="alert alert-warning" role="alert" style="margin-bottom:0px;">
             This dictionary search utility is part of a private beta test. Please do not circulate publicly!
         </div>
