--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
     <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
     <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.3"></script>
-    <script src="./latinize.js" charset="utf-8"></script>
-    <script src="./dict.js" charset="utf-8"></script>
-    <script src="./dict-key.js" charset="utf-8"></script>
-    <script src="./search.js" charset="utf-8"></script>
-    <script src="./index.js" charset="utf-8"></script>
-    <script src="./index-hooks.js" charset="utf-8"></script>
+    <script src="./resources/js/latinize.js" charset="utf-8"></script>
+    <script src="./resources/js/dict.js" charset="utf-8"></script>
+    <script src="./resources/js/dict-key.js" charset="utf-8"></script>
+    <script src="./resources/js/pre-search.js" charset="utf-8"></script>
+    <script src="./resources/js/search.js" charset="utf-8"></script>
+    <script src="./resources/js/index.js" charset="utf-8"></script>
+    <script src="./resources/js/index-hooks.js" charset="utf-8"></script>
     <link rel="shortcut icon" type="image/png" href="favicon.png" >
 </head>
 
