rude words marked

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.3"></script>
     <script src="./resources/js/latinize.js" charset="utf-8"></script>
-    <script src="./resources/js/dict.js" charset="utf-8"></script>
+    <script src="./resources/js/generated/dict.js" charset="utf-8"></script>
     <script src="./resources/js/dict-key.js" charset="utf-8"></script>
     <script src="./resources/js/pre-search.js" charset="utf-8"></script>
     <script src="./resources/js/search.js" charset="utf-8"></script>
