rude word button

--- a/index.html
+++ b/index.html
@@ -61,12 +61,16 @@
         <div class="container ml-2 mr-2">
             <div class="container" style="width:100%;">
                 <form class="form d-flex justify-content-center md-form form-sm mt-0 form-inline">
-                    <input class="form-control form-control-sm ml-3 w-75 pl-0 pr-0" type="text" placeholder="Search" id="search" style="width:80%;" autofocus/>
+                    <input class="form-control form-control-sm ml-3 w-75 pl-0 pr-0" type="text" placeholder="Search" id="search" style="width:100%;" autofocus/>
                     <select class="form-control w-25 pl-0 pr-0" id="search-direction" style="width:18%;">
                         <option value="0">English & CW</option>
                         <option value="1">CW</option>
                         <option value="2">English</option>
                     </select>
+                    <label></label>
+                    <div class="checkbox">
+                        <label><input type="checkbox" value="" checked="" id="show-rude">&nbsp;Hide vulgar</label>
+                    </div>
                 </form>
             </div>
         </div>
