--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
             <span></span>
         </div>
 
-        <div class="container ml-2 mr-2">
+        <div id="alt-container" class="container ml-2 mr-2"></div>
+
+        <div id="results-container" class="container ml-2 mr-2">
             <h2 class="text-center" style="margin-top:0px; padding-top:0px;">
                 Search Results
             </h2>
@@ -99,6 +101,7 @@
                         <th>CW</th>
                         <th>Origin</th>
                         <th>Source</th>
+                        <th/>
                     </tr>
                 </thead>
                 <tbody></tbody>
